--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <tr>
       <td><img src="Jameel circle.png" alt="Jameel profile picture"></td>
       <td><h1>Jameel Zalloum</h1>
-      <p><em><strong>Inspiring Software Developer.</strong></em></p>
+      <p><em><strong></strong></em></p>
       <p>My <a href="https://www.linkedin.com/in/jameelzalloum/">LinkedIn</a> Page</p>
       <p>I am a UTD student who enjoys coding and helping others.</p>
       <p>I dream of becoming an astounding software developer</p></td>
