--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <p><em><strong></strong></em></p>
       <p>My <a href="https://www.linkedin.com/in/jameelzalloum/">LinkedIn</a> Page</p>
       <p>I am a UTD student who enjoys coding and helping others.</p>
-      <p>I dream of becoming an astounding software developer</p></td>
+      <p>I dream of becoming an astounding software developer and business man</p></td>
     </tr>
   </table>
   <hr>
